# smart_plugs

./: .env.templae  .gitignore  README.md  SmartDevice.py  debug_main.py  docker-compose.yml  main.py  models.py  requirements.txt
backend/: Dockerfile  README.md  SmartDevice.py  config.json  config.json.template  config.template.json  database.py  debug_main.py  main.py  pyproject.toml
backend/models/: alchemy.py  responses.py  tuya.py
frontend/: Dockerfile  next.config.js
frontend/src/app/: globals.css  page.tsx
frontend/src/components/: device-card.tsx  load-spinner.tsx  main-page-content.tsx  power-icon.tsx  refresh-button.tsx
frontend/src/logic/: ServerSideRequests.ts
frontend/src/logic/models/: Responses.ts
