[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["marioweid <mario.weidner@gmx.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.29"
fastapi = "^0.110.0"
tinytuya = "^1.13.2"

[tool.poetry.dev-dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
